--- a/Email Manager/packages.config
+++ b/Email Manager/packages.config
@@ -9,10 +9,16 @@
   <package id="ExcelDataReader.DataSet" version="3.7.0" targetFramework="net472" />
   <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.30.0" targetFramework="net472" />
+  <package id="Guna.UI2.WinForms" version="2.0.4.7" targetFramework="net472" />
   <package id="K4os.Compression.LZ4" version="1.3.8" targetFramework="net472" />
   <package id="K4os.Compression.LZ4.Streams" version="1.3.8" targetFramework="net472" />
   <package id="K4os.Hash.xxHash" version="1.0.8" targetFramework="net472" />
   <package id="MailKit" version="4.12.0" targetFramework="net472" />
+  <package id="MetroFramework" version="1.2.0.3" targetFramework="net472" />
+  <package id="MetroFramework.Design" version="1.2.0.3" targetFramework="net472" />
+  <package id="MetroFramework.Fonts" version="1.2.0.3" targetFramework="net472" />
+  <package id="MetroFramework.RunTime" version="1.2.0.3" targetFramework="net472" />
+  <package id="MetroModernUI" version="1.4.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net472" />
   <package id="MimeKit" version="4.12.0" targetFramework="net472" />
